--- a/PitBoss/UserControls/Windows/Overlay_Window.xaml
+++ b/PitBoss/UserControls/Windows/Overlay_Window.xaml
@@ -20,8 +20,8 @@
                 <RowDefinition/>
             </Grid.RowDefinitions>
             <TextBlock x:Name="DistValue_TextBlock" Grid.Row="0" Grid.Column="1" Text="{Binding Path=LatestDist, StringFormat=F1}" Foreground="{Binding userOptions.OverlayValuesFontColor}" FontSize="{Binding userOptions.OverlayFontSize}" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="2,2,2,2"/>
-            <TextBlock x:Name="DistLabel_TextBlock" Grid.Row="0" Grid.Column="0" Text="Dist: " Foreground="{Binding Path=OverlayLabelsFontColor}" FontSize="{Binding Path=OverlayFontSize}" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="2,2,2,2"/>
-            <TextBlock x:Name="AzLabel_TextBlock"  Grid.Row="1" Grid.Column="0" Text="Az: " Foreground="{Binding Path=OverlayLabelsFontColor}" FontSize="{Binding Path=OverlayFontSize}" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="2,2,2,2"/>
+            <TextBlock x:Name="DistLabel_TextBlock" Grid.Row="0" Grid.Column="0" Text="{DynamicResource textbolck_distance}" Foreground="{Binding Path=OverlayLabelsFontColor}" FontSize="{Binding Path=OverlayFontSize}" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="2,2,2,2"/>
+            <TextBlock x:Name="AzLabel_TextBlock"  Grid.Row="1" Grid.Column="0" Text="{DynamicResource textbolck_azimut}" Foreground="{Binding Path=OverlayLabelsFontColor}" FontSize="{Binding Path=OverlayFontSize}" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="2,2,2,2"/>
             <TextBlock x:Name="AzValue_TextBlock" Grid.Row="1" Grid.Column="1" Text="{Binding Path=LatestAz, StringFormat=F1}" Foreground="{Binding userOptions.OverlayValuesFontColor}" FontSize="{Binding userOptions.OverlayFontSize}" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="2,2,2,2"/>
             
         </Grid>
