--- a/PitBoss/Rescources/English.xaml
+++ b/PitBoss/Rescources/English.xaml
@@ -36,8 +36,11 @@
     <!--Connections-->
     <system:String x:Key="groupbox_connection_header">Connection Settings</system:String>
     <system:String x:Key="user_role_header">I am a:</system:String>
-        <!--header_gunner-->
-        <!--header_spotter-->
+    
+    <!-- Resources for handling noun declensions in languages that require case changes. -->
+    <system:String x:Key="user_role_gunner">Gunner</system:String> 
+    <system:String x:Key="user_role_spotter">Spotter</system:String>
+    
     <system:String x:Key="textblock_server_ip">Server's IP:</system:String>
     <system:String x:Key="textbox_server_ip_tooltip">ex: 192.168.0.1</system:String>
     <system:String x:Key="button_connect">Connect to Server</system:String>
