--- a/PitBoss/Rescources/German.xaml
+++ b/PitBoss/Rescources/German.xaml
@@ -36,8 +36,11 @@
     <!--Connections-->
     <system:String x:Key="groupbox_connection_header">Verbindungseinstellungen</system:String>
     <system:String x:Key="user_role_header">Ich bin a:</system:String>
-    <!--header_gunner-->
-    <!--header_spotter-->
+
+    <!-- Resources for handling noun declensions in languages that require case changes. -->
+    <system:String x:Key="user_role_gunner">Schütze</system:String>
+    <system:String x:Key="user_role_spotter">Aufklärer</system:String>
+    
     <system:String x:Key="textblock_server_ip">Server IP:</system:String>
     <system:String x:Key="textbox_server_ip_tooltip">ex: 192.168.0.1</system:String>
     <system:String x:Key="button_connect">zum Server verbinden</system:String>
