--- a/PitBoss/Rescources/German.xaml
+++ b/PitBoss/Rescources/German.xaml
@@ -21,6 +21,7 @@
     <system:String x:Key="textblock_author">von [82DK-A] Witch,PhD</system:String>
     <system:String x:Key="textblock_contributors">Unterstützer:</system:String>
     <system:String x:Key="textblock_version">Version:</system:String>
+    <system:String x:Key="textblock_translators">Übersetzer:</system:String>
 
     <!--Gunner and Spotter-->
     <system:String x:Key="groupbox_coordinates_header">Firing Coordinates</system:String>
