--- a/PitBoss/Rescources/Russian.xaml
+++ b/PitBoss/Rescources/Russian.xaml
@@ -56,6 +56,7 @@
     <system:String x:Key="textblock_opacity">Прозрачность:</system:String>
     <system:String x:Key="textblock_label_color">Цвет метки:</system:String>
     <system:String x:Key="textblock_value_color">Цвет значения:</system:String>
+    <system:String x:Key="textblock_overlay_color">Цвет наложения:</system:String>
     <system:String x:Key="comboboxitem_color_red">Красный</system:String>
     <system:String x:Key="comboboxitem_color_orange">Оранжевый</system:String>
     <system:String x:Key="comboboxitem_color_yellow">Желтый</system:String>
