--- a/PitBoss/MainWindow.xaml
+++ b/PitBoss/MainWindow.xaml
@@ -33,6 +33,8 @@
                 <MenuItem x:Name="Italian_MenuItem" Header="Italiano" Click="Language_MenuItem_Click"/>
                 <MenuItem x:Name="Russian_MenuItem" Header="Русский" Click="Language_MenuItem_Click"/>
                 <MenuItem x:Name="Spanish_MenuItem" Header="Español" Click="Language_MenuItem_Click"/>
+                <Separator/>
+                <MenuItem x:Name="UseWindowsLanguage_MenuItem" Header="{DynamicResource menu_language_turn_off}" Click="UseWindowsLanguage_MenuItem_Click"/>
             </MenuItem>
         </Menu>
         <TabControl x:Name="Main_TabControl" Grid.Row="1" Grid.Column="0">
