--- a/PitBoss/UserControls/Spotter_UserControl.xaml
+++ b/PitBoss/UserControls/Spotter_UserControl.xaml
@@ -16,6 +16,7 @@
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
+                <RowDefinition Height="110"/>
                 <RowDefinition/>
             </Grid.RowDefinitions>
             <StackPanel Grid.Row="0" Grid.Column="0">
@@ -47,6 +48,13 @@
 
                 <Button x:Name="SendCoords_Button" Content="{DynamicResource button_text}" Click="SendCoords_Button_Click" HorizontalAlignment="Left" Margin="5,5,5,5" ToolTip="{DynamicResource button_tooltip}"/>
             </StackPanel>
+            <DataGrid x:Name="PreviousCoords_DataGrid" Grid.Row="1" Grid.Column="0" AutoGenerateColumns="False" CanUserAddRows="False" CanUserSortColumns="False" IsReadOnly="True">
+                <DataGrid.Columns>
+                    <DataGridTextColumn Header="{DynamicResource textbolck_distance}" Binding="{Binding Path=Dist}"/>
+                    <DataGridTextColumn Header="{DynamicResource textbolck_azimut}" Binding="{Binding Path=Az}"/>
+                </DataGrid.Columns>
+                
+            </DataGrid>
         </Grid>
     </GroupBox>
 </UserControl>
